# micro-vm-with-docker

./: .gitignore  LICENSE.md  README.md  install.sh
.github/workflows/: build-image.yml  build-virtctl-binary.yml
images/ubuntu-noble/: Dockerfile  entrypoint.sh
virtctl/: Cargo.toml
virtctl/examples/: infra.yaml
virtctl/src/: cli.rs  config.rs  docker.rs  error.rs  main.rs  ui.rs  util.rs
virtctl/src/commands/: check.rs  disk.rs  iac.rs  mod.rs  network.rs  snapshot.rs  vm.rs
